<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="diceData"
            type="com.example.learning_practice.DiceData" />
    </data>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/nav_activity"
                android:layout_width ="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/navigation_activity"
                />

            <Button
                android:id="@+id/frag_man_activity"
                android:layout_width ="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fragment_manager_activity"
                />

            <Button
                android:id="@+id/database_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/database_activity"
                />

            <Button
                android:id="@+id/recycler_view_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/recycler_view_activity"
                />

            <Button
                android:id="@+id/api_test_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Api View Activity"
                />

        </LinearLayout>
</layout>
