<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".navigation_activity_module.fragments.FirstTwoDice"
    >
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/prev1"
            android:layout_width ="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/previous"
            />
    <ScrollView
        android:id="@+id/scrollId"
        android:layout_width="wrap_content"
        android:layout_height="600dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageButton
                android:id="@+id/dice_image"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dice_1" />
            <ImageButton
                android:id="@+id/dice_image2"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dice_2" />
            <ImageButton
                android:id="@+id/dice_image9"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dice_3" />
            <ImageButton
                android:id="@+id/dice_image10"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dice_4" />
            <ImageButton
                android:id="@+id/dice_image11"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dice_5" />
            <ImageButton
                android:id="@+id/dice_image12"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dice_6" />
        </LinearLayout>
    </ScrollView>
        <Button
            android:id="@+id/next1"
            android:layout_width ="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            />
    </LinearLayout>
    <Button
        android:id="@+id/change1"
        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change"
        />
</FrameLayout>
</layout>
